<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_item_name"
        android:hint="@string/hint_item_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Price field -->
    <EditText
        android:id="@+id/edit_item_price"
        android:hint="@string/hint_item_price"
        android:inputType="numberDecimal"
        style="@style/EditorFieldStyle" />

    <!-- Quantity editing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Quantity field -->
        <EditText
            android:id="@+id/edit_item_quantity"
            android:hint="@string/hint_item_quantity"
            android:inputType="number"
            style="@style/EditorFieldStyle"
            android:layout_width="0dp"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/quantity_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"/>

        <Button
            android:id="@+id/quantity_subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract_button"/>

    </LinearLayout>

    <!-- Supplier name field -->
    <EditText
        android:id="@+id/edit_item_supplier_name"
        android:hint="@string/hint_item_supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle" />

    <!-- Supplier phone number field -->
    <EditText
        android:id="@+id/edit_item_supplier_phone"
        android:hint="@string/hint_item_supplier_phone"
        android:inputType="phone"
        style="@style/EditorFieldStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_order_item"/>

        <Button
            android:id="@+id/button_delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_item"/>

    </LinearLayout>

</LinearLayout>
